@@ -6,8 +6,6 @@
 //       All Rights Reserved
 //
 
-#include <syslog.h>
-
 #include <stdlib.h>
 #include <stdio.h>
 
@@ -51,18 +49,6 @@ SyCmdSwitch::SyCmdSwitch(int argc,char *argv[],const char *modname,
       switch_processed.push_back(false);
     }
   }
-
-  //
-  // Initialize Logging
-  //
-#ifndef WIN32
-  if(debug) {
-    openlog(modname,LOG_PERROR,LOG_USER);
-  }
-  else {
-    openlog(modname,0,LOG_USER);
-  }
-#endif  // WIN32
 }
 
 
